--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio</title>
+    <title>Gopi Shankar S</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,7 +46,9 @@
             </div>
             <div class="info">
                 <h1>
-                    Campus Community Manager @ TinkerHub
+                    Hey,
+                </h1><h1> 
+                    I'm Gopi Shankar S
                 </h1>
                 <h3>Hi, I'm Gopi Shankar S</h3>
                 <p>I'm currently a computer science undergrad. Currently working as the campus community management intern for TinkerHub. I enjoy networking with folks from all backgrounds.
